# BioFast

./: README.md
hashExperimentCode/: evaluateHashMethod(AgeDB).ipynb  evaluateHashMethod(AgeDB)HashCompare(DifferentγAndP).ipynb  evaluateHashMethod(AgeDB)HashCompare.ipynb  evaluateHashMethod(CFP-FP)HashCompare(DifferentγAndP).ipynb  evaluateHashMethod(LFW)HashCompare.ipynb  evaluateHashMethodDifferentγ(AgeDB).ipynb  evaluateHashMethodDifferentγ(LFW).ipynb
hashExperimentCode/.ipynb_checkpoints/: evaluateHashMethod(LFW)-checkpoint.ipynb  evaluateHashMethod(LFW)HashCompare(DifferentγAndP)-checkpoint.ipynb
hash_comm/: CMakeLists.txt  hashGen.cpp
hash实验代码/: evaluateHashMethod(CFP-FP)HashCompare.ipynb  evaluateHashMethod(LFW).ipynb  evaluateHashMethod(LFW)HashCompare(DifferentγAndP).ipynb  evaluateHashMethodDifferentγ(CFP-FP).ipynb
hash实验代码/.ipynb_checkpoints/: evaluateHashMethod(AgeDB)HashCompare(DifferentγAndP)-checkpoint.ipynb  evaluateHashMethod(AgeDB)HashCompare-checkpoint.ipynb  evaluateHashMethod(CFP-FP)-checkpoint.ipynb  evaluateHashMethod(CFP-FP)HashCompare(DifferentγAndP)-checkpoint.ipynb  evaluateHashMethodDifferentγ(AgeDB)-checkpoint.ipynb  evaluateHashMethodDifferentγ(LFW)-checkpoint.ipynb
homorphic_experiment/: CMakeLists.txt  data.txt  open.cpp  readData.cpp
